--- a/style.css
+++ b/style.css
@@ -1,43 +1,143 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;500;600;700;800;900&display=swap');
 
 body {
-	font-family: 'Source Code Pro', monospace;
-	margin: 0;
-	padding: 0;
+    font-family: 'Source Code Pro', monospace;
+    margin: 0;
+    padding: 0;
 }
 
 .main {
-	width: 1240px;
-	margin: 0 auto;
+    width: 1240px;
+    margin: 0 auto;
 }
 
 .header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	height: 73px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 73px;
 }
 
 .logo {
-	margin: 10px;
-	font-weight: 900;
-	font-style: italic;
-	font-size: 32px;
+    margin: 10px;
+    font-weight: 900;
+    font-style: italic;
+    font-size: 32px;
 }
 
 .menu {
-	width: 560px;
-	display: flex;
-	list-style-type: none;
-	justify-content: space-between;
+    width: 560px;
+    display: flex;
+    list-style-type: none;
+    justify-content: space-between;
 }
+
 .menu-item {
-	font-size: 24px;
+    font-size: 24px;
 }
-.contact-button{
-	color: white;
-	background: #FCC028;
-	border: 0 solid black;
-	height: 43px;
-	width: 119px;
+
+.contact-button {
+    color: white;
+    background: #FCC028;
+    border: 0 solid black;
+    height: 43px;
+    width: 119px;
+}
+
+.img {
+    position: relative;
+    left: 1000px;
+    width: 612.44px;
+    height: 573px;
+
+}
+
+.text {
+    position: relative;
+    bottom: 500px;
+    left: 300px;
+    width: 300px;
+    height: 60px;
+
+    font-size: 70px;
+
+    color: #000000;
+}
+
+.under-text {
+    position: relative;
+    bottom: 500px;
+    left: 200px;
+    width: 609px;
+    height: 108px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 35px;
+
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.button1 {
+    color: white;
+    width: 157px;
+    height: 43px;
+    background: #FCC028;
+    border-radius: 5px;
+}
+
+.logos {
+    position: relative;
+    left: 400px;
+    bottom: 30px;
+    width: 23px;
+    height: 20px;
+    background: url(Vector.png);
+}
+
+
+.portret {
+    position: relative;
+    width: 311px;
+    height: 720px;
+    left: 252px;
+    top: 40px;
+
+
+}
+
+.content-about-me{
+height: 800px;
+
+}
+
+.about {
+    position: relative;
+    left: 1300px;
+    bottom: 600px;
+    font-size: 30px;
+
+}
+
+.under1 {
+    position: relative;
+    left: 1000px;
+    bottom: 600px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 27px;
+    font-family: 'Montserrat', sans-serif;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.smile {
+
+    position: relative;
+
+
+
 }
